--- a/src/pages/gallery.html
+++ b/src/pages/gallery.html
@@ -76,7 +76,7 @@
             nihil?</p>
           <ul class="lists">
             <li class="list">
-              <a class="btn btn__view" href="./gallery.html">View products</a>
+              <a class="btn btn__view" href="./categories.html">View products</a>
             </li>
           </ul>
         </div>
@@ -107,7 +107,7 @@
             nihil?</p>
           <ul class="lists">
             <li class="list">
-              <a class="btn btn__view" href="./gallery.html">View products</a>
+              <a class="btn btn__view" href="./categories.html">View products</a>
             </li>
           </ul>
         </div>
@@ -126,7 +126,7 @@
             nihil?</p>
           <ul class="lists">
             <li class="list">
-              <a class="btn btn__view" href="./gallery.html">View products</a>
+              <a class="btn btn__view" href="./categories.html">View products</a>
             </li>
           </ul>
         </div>
@@ -157,7 +157,7 @@
             nihil?</p>
           <ul class="lists">
             <li class="list">
-              <a class="btn btn__view" href="./gallery.html">View products</a>
+              <a class="btn btn__view" href="./categories.html">View products</a>
             </li>
           </ul>
         </div>
